# binance-futures-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  binance_client.py  build.py  conditions.py  config.py  config.toml  install.sh  monitor.py  notifier.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build.py
src/: binance_client.py  conditions.py  config.py  daemon.py  main.py  notifier.py  paths.py  proclock.py  store.py  version.py
tests/: conftest.py  test_color_conditions.py  test_conditions.py  test_config.py  test_paths.py  test_price.py  test_resolve_conditions.py
