[project]
name = "binance-futures-monitor"
version = "1.0.5"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "zstandard>=0.25.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
